# box

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.sh
docs/: boxer_workflow.md
examples/: README.md
pipeline/: __init__.py  _common.py  config.py  convert.py  diagnostic.py  export.py  extract_frames.py  fuse.py  gravity.py  iphone_k.py  run.py  run_boxer.py  run_vggt.py  run_vggt_slam.py  save_owl_bbs.py  ui.py  visualize.py
